# hydrovent_warning

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac  reconfigure.sh
HydroVentWarning/: HydroVentWarning.sln
HydroVentWarning/HydroVentWarning/: HydroVentWarning.vcxproj  HydroVentWarning.vcxproj.filters
HydroVentWarning/test_CrossMap/: test_CrossMap.vcxproj  test_CrossMap.vcxproj.filters
HydroVentWarning/test_HydrothermalVentingLine/: test_HydrothermalVentingLine.vcxproj  test_HydrothermalVentingLine.vcxproj.filters
src/: CrossMap.cc  CrossMap.h  FileBaseParser.cc  FileBaseParser.h  GetInputFromUser.cc  GetInputFromUser.h  HydrothermalVentingFileParser.cc  HydrothermalVentingFileParser.h  HydrothermalVentingLine.cc  HydrothermalVentingLine.h  ProgressInfo.cc  ProgressInfo.h  main.cc
test/: ColBuilder.cc  ColBuilder.h  ColoredOutput.cc  ColoredOutput.h  TestUtils.h  test_CrossMap.cc  test_HydrothermalVentingLine.cc
testdata/: InputFileLineSegments.txt  example.txt  example2.txt  test.txt
